# gp-opponent-prediction-models-cmu

barcgp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gp/barcgp/: CMakeLists.txt  package.xml
gp/barcgp/controllers/: MPCC_H2H_approx.py
mpc/config/: config.yaml  h2h_config.yaml
mpc/data/: waypoints.txt
mpc/include/: mpc_model.h  util.h
mpc/scripts/: find_track_centerline
mpc/src/: mpc_model.cpp  mpc_node.cpp  util.cpp
